<resources>
    <string name="app_name">Booque</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profil">Profil</string>
    <string name="buku">Buku</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="yuk_lanjut">Yuk Lanjut</string>
    <string name="booque">booque</string>
    <string name="logo_booque">logo booque</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="welcome_desc">Mari bergabung dengan komunitas Booque, berbagi buku bekas, dan berkontribusi dalam pengurangan penumpukan buku bekas</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="bergabung_dengan_komunitas_booque_dan_berkontribusi">Bergabung dengan komunitas Booque dan berkontribusi</string>
    <string name="daftar_dengan">Daftar dengan</string>
    <string name="atau">atau</string>
    <string name="logo_gmail_untuk_button">logo gmail untuk button</string>
    <string name="dummy_nama_lengkap">Contoh : Bagas Permana</string>
    <string name="dengan_membuat_akun_berarti_kamu_setuju_dengan_ketentuan_layanan_booque">Dengan membuat akun berarti kamu setuju dengan <b><u>Ketentuan Layanan</u></b> Booque</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="udah_daftar_login_disini"><u>Udah Daftar ? Login Disini</u></string>
    <string name="email">Email</string>
    <string name="dummy_email">Contoh : bagaspramana17@gmail.com</string>
    <string name="minimal_8_karakter_beserta_angka">Minimal 8 karakter beserta angka</string>
    <string name="yuk_masuk_akunmu_untuk_lanjut">Yuk masuk akunmu untuk lanjut</string>
    <string name="masukkan_password_kamu">Masukkan password kamu</string>
    <string name="belum_punya_akun_daftar"><u>Belum punya akun ? Daftar</u></string>
    <string name="masuk">Masuk</string>
    <string name="login_dengan">Login dengan</string>
    <string name="password">Password</string>
    <string name="lanjut">Lanjut</string>
    <string name="daftar_dengan_google">Daftar dengan Google</string>
    <string name="login_dengan_google">Login dengan Google</string>

    <!--  Valued String  -->
    <string name="welcome_title">Hai %1$s,</string>
    <string name="yuk_masuk">Yuk Masuk</string>
    <string name="buku_disekitarmu">Buku disekitarmu</string>
    <string name="lihat_selengkapnya">Lihat selengkapnya</string>
    <string name="dummy_category">Komik</string>
    <string name="komik_naruto_vol_6_9">Komik Naruto Vol 6-9</string>
    <string name="bondowoso_jawa_timur">Bondowoso, Jawa Timur</string>
    <string name="atau_login_dengan">atau login dengan</string>
    <string name="daftar">Daftar</string>
    <string name="atau_daftar_dengan">atau daftar dengan</string>
    <string name="logout">Logout</string>
    <string name="photo_milik_user">Photo milik user</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="riwayat">Riwayat</string>
    <string name="add">Add</string>
    <string name="book_title">Book Title</string>
    <string name="kategori">Kategori</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tambahkan_foto">Tambahkan Foto</string>
    <string name="tambahkan_foto_buku">Tambahkan foto buku</string>
    <string name="contoh_buku_komik_buku_matematika">contoh : Buku komik, buku matematika</string>
    <string name="nama_buku">Nama Buku</string>
    <string name="submit">Submit</string>
    <string name="alamat">Alamat</string>
    <string name="contoh_jalan_soekarno_hatta_no_34">contoh: Jalan Soekarno Hatta No. 34</string>
    <string name="penulis">Penulis</string>
    <string name="penerbit">Penerbit</string>
    <string name="contoh_2012_2015_2020">contoh : 2012, 2015, 2020</string>
    <string name="contoh_erlangga_gramedia">contoh: Erlangga, Gramedia</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="daftar_buku_saya">Daftar Buku Saya</string>
    <string name="faq">FAQ</string>
    <string name="bantuan">Bantuan</string>
    <string name="hint_name">Contoh : Dani Hidayat</string>
    <string name="hint_email">contoh : user@gmail.com</string>
    <string name="no_telepon">No Telepon</string>
    <string name="masukkan_no_telepon_anda">Masukkan no telepon anda</string>
    <string name="masukkan_alamat_anda">Masukkan alamat anda</string>
    <string name="kota">Kota</string>
    <string name="pilih_kota_anda">Pilih kota anda</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="provinsi">Provinsi</string>
    <string name="province_name">Province Name</string>
    <string name="blog_title">Blog Title</string>
    <string name="category">Category</string>
    <string name="blog">Blog</string>
    <string name="description">Description</string>
    <string name="hubungi_booqer">Hubungi Booqer</string>
    <string name="barcode_akun">Barcode Akun</string>
    <string name="scan_barcode_dibawah_ini">Scan barcode dibawah ini</string>
    <string name="sumbangkan_buku">Sumbangkan Buku</string>
    <string name="scan_barcode_penerima">Scan Barcode Penerima</string>
    <string name="kalian_bisa_cek_barcode_di_halaman_profile_dan_pilih_tombol_barcode_akun">Kalian bisa cek barcode di halaman profile dan pilih tombol Barcode Akun</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="upload_bukti_berupa_foto">Upload bukti berupa foto</string>
    <string name="berhasil">Berhasil</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="buku_sudah_di_ambil">Buku sudah di ambil</string>
    <string-array name="category_list">
        <item>Novel</item>
        <item>Komik</item>
        <item>Buku Pelajaran</item>
        <item>Sejarah</item>
        <item>Dongeng</item>
        <item>Kamus</item>
        <item>Cergam</item>
    </string-array>

</resources>