<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.elapp.booque.presentation.ui.account.handler.RegisterHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.ui.account.RegisterDataFragment">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg"
                    android:hint="@string/dummy_email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/nama_lengkap" />

                <EditText
                    android:id="@+id/edt_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg"
                    android:hint="@string/dummy_nama_lengkap"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg"
                    android:hint="@string/minimal_8_karakter_beserta_angka"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/dengan_membuat_akun_berarti_kamu_setuju_dengan_ketentuan_layanan_booque"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btn_buat_akun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="16dp"
                    android:onClick="@{(v) -> handler.onRegisterClicked(v) }"
                    style="@style/DarkButtonStyle"
                    android:background="@drawable/btn_background_purple"
                    android:textSize="16sp"
                    android:text="@string/buat_akun" />

            </LinearLayout>

            <View
                android:id="@+id/background_dim"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:background="#4B131313" />

            <ProgressBar
                android:id="@+id/progress_login"
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:translationZ="2dp"
                android:visibility="gone"
                android:layout_gravity="center_vertical|center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>